# cli-todo

./: .clang-format  CMakeLists.txt  README.md
docs/: actions_8cpp.html  actions_8cpp__incl.map  actions_8cpp__incl.md5  actions_8h.html  actions_8h.js  actions_8h__dep__incl.map  actions_8h__dep__incl.md5  actions_8h__incl.map  actions_8h__incl.md5  actions_8h_source.html  annotated.html  annotated_dup.js  basic__view_8cpp.html  basic__view_8cpp.js  basic__view_8cpp__incl.map  basic__view_8cpp__incl.md5  basic__view_8h.html  basic__view_8h.js  basic__view_8h__dep__incl.map  basic__view_8h__dep__incl.md5  basic__view_8h__incl.map  basic__view_8h__incl.md5  basic__view_8h_source.html  class_todo_1_1_action-members.html  class_todo_1_1_action.html  class_todo_1_1_action.js  class_todo_1_1_action__coll__graph.map  class_todo_1_1_action__coll__graph.md5  class_todo_1_1_action__inherit__graph.map  class_todo_1_1_action__inherit__graph.md5  class_todo_1_1_add_action-members.html  class_todo_1_1_add_action.html  class_todo_1_1_add_action.js  class_todo_1_1_add_action__coll__graph.map  class_todo_1_1_add_action__coll__graph.md5  class_todo_1_1_add_action__inherit__graph.map  class_todo_1_1_add_action__inherit__graph.md5  class_todo_1_1_basic_view-members.html  class_todo_1_1_basic_view.html  class_todo_1_1_basic_view.js  (+265 more)
docs/latex/: actions_8cpp.tex  actions_8cpp__incl.md5  actions_8h.tex  actions_8h__dep__incl.md5  actions_8h__incl.md5  actions_8h_source.tex  annotated.tex  basic__view_8cpp.tex  basic__view_8cpp__incl.md5  basic__view_8h.tex  basic__view_8h__dep__incl.md5  basic__view_8h__incl.md5  basic__view_8h_source.tex  class_todo_1_1_action.tex  class_todo_1_1_action__coll__graph.md5  class_todo_1_1_action__inherit__graph.md5  class_todo_1_1_add_action.tex  class_todo_1_1_add_action__coll__graph.md5  class_todo_1_1_add_action__inherit__graph.md5  class_todo_1_1_basic_view.tex  class_todo_1_1_controller.tex  (+108 more)
src/: basic_view.cpp  basic_view.h  controller.cpp  controller.h  i_view.cpp  i_view.h  main.cpp  model.cpp  model.h  todo_controller.cpp  view.cpp  view.h
(+93 files in other folders)
